log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: space-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
      containers:
        - name: log-output
          image: velivalentine/log-output@sha256:f529310a8018746ec5f27699c00db8992c01544f5d19cc55a411598487544cbc

          resources:
            limits:
              cpu: "200m"
              memory: "100Mi"

          volumeMounts:
            - mountPath: /usr/src/logs
              name: shared-logs

          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /
              port: 3000

        - name: log-writer
          image: velivalentine/log-writer:1.10-prod
          resources:
            limits:
              cpu: "150m"
              memory: "100Mi"
          volumeMounts:
            - mountPath: /usr/src/logs
              name: shared-logs
